# Strawberry_shape_analyisis

PT_rotate/: CMakeLists.txt  main.cpp
Strawberry_uniformity_analysis/: CMakeLists.txt  main.cpp
